bison-parser/examples/ill_typed/bad3.sa
module X
       x : bool init false;
       x : bool init true;
endmodule